# ucsc-cse-101-avl-rewrite

./: avl.py  pyproject.toml  readme.md
tests/: conftest.py  test_allwords.py  test_simple_input.py
